--- a/code/mysite/polls/templates/polls/detail.html
+++ b/code/mysite/polls/templates/polls/detail.html
@@ -3,11 +3,12 @@
 <h1>{{ question.question_text }}</h1>
 
 
-<form action="" method="post">
+<form action="{% url 'polls:vote' question.id %}" method="post">
+{% csrf_token %}
 <!-- 설문 - 답변항목 -->
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}"
-            value="{{ choice.id }}">
+{% for choice in question.choice_set.all %} 
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" 
+           value="{{ choice.id }}">
     <label for="choice{{ forloop.counter }}" >{{ choice.choice_text }}</label> <br>
 {% endfor %}
 <input type="submit" value="투표하기">
