--- a/code/mysite/polls/templates/polls/results.html
+++ b/code/mysite/polls/templates/polls/results.html
@@ -1,1 +1,15 @@
 <h1>결과 화면</h1>
+
+<h2>{{ question.question_text }}</h2>
+
+<ul>
+{% for choice in question.choice_set.all %}
+    <li>{{ choice.choice_text }} -- {{ choice.votes }} 개</li>
+{% endfor %}
+</ul>
+
+<a href="{% url 'polls:detail' question.id %}">다시 투표하기</a>
+
+
+
+
