--- a/code/mysite/polls/templates/polls/results.html
+++ b/code/mysite/polls/templates/polls/results.html
@@ -10,6 +10,15 @@
 
 <a href="{% url 'polls:detail' question.id %}">다시 투표하기</a>
 
+{% comment %}
+<!-- 
+    {% url 'polls:detail' question.id %}
+    {% url '앱이름:경로이름' question.id %}"
+    - 앱이름        : urls.py 에서 설정한 app_name="polls"
+    - 경로 이름     : path( name="detail" )
 
+    * url 은 urls.py 에 설정된 앱이름:경로이름을 지정하는 키워드
+ -->
+ {% endcomment %}
 
 
