--- a/code/mysite/polls/templates/polls/index.html
+++ b/code/mysite/polls/templates/polls/index.html
@@ -2,7 +2,9 @@
 {% if question_list %}
     <ul>
         {% for question in question_list %}
-            <li><a href="/polls/{{ question.id }}">{{ question.question_text }}</a></li>
+            <li><a href="/polls/{{ question.id }}">{{ question.question_text }}</a>
+                <span>{{ question.sum }}</span>
+            </li>
         {% endfor %}
     </ul>
 {% else %}
