--- a/code/mysite/polls/templates/polls/index.html
+++ b/code/mysite/polls/templates/polls/index.html
@@ -3,7 +3,7 @@
     <ul>
         {% for question in question_list %}
             <li><a href="/polls/{{ question.id }}">{{ question.question_text }}</a>
-                <span>{{ question.sum }}</span>
+                <span>투표 수 : {{ question.sum }}</span>
             </li>
         {% endfor %}
     </ul>
