--- a/code/myform/myapp/templates/myapp/index.html
+++ b/code/myform/myapp/templates/myapp/index.html
@@ -1,5 +1,11 @@
 <h1>form 양식 만들기</h1>
 
+{% comment %}
+    RuntimeError
+    - URL doesn't end in a slash ...
+    * 요청경로가 / 끝나지 않아서 발생하는 에러
+    * /myapp/ 이와같이 / 로 끝나는 url 로 작성해주어야한다
+{% endcomment %}
 <form action="/myapp/" method="post">
     {% csrf_token %}
     {{ form }}
