--- a/code/mybooks/books/templates/books/author_list.html
+++ b/code/mybooks/books/templates/books/author_list.html
@@ -1,10 +1,12 @@
 
-
 <h2>저자 목록</h2>
+
 <ul>
     {% for author in object_list %}
         <li>
-            <a href="{% url 'books:author_detail' author.id %}">{{ author.name }}</a>
+            <a href="{% url 'books:author_detail' author.id %}">
+                {{ author.name }}
+            </a>
         </li>
     {% endfor %}
 </ul>
