--- a/code/mybooks/books/templates/books/publisher_list.html
+++ b/code/mybooks/books/templates/books/publisher_list.html
@@ -1,10 +1,13 @@
 
-
 <h2>출판사 목록</h2>
+
 <ul>
     {% for publisher in object_list %}
         <li>
-            <a href="{% url 'books:publisher_detail' publisher.id %}">{{ publisher.name }}</a>
+            <a href="{% url 'books:publisher_detail' publisher.id %}">
+                {{ publisher.name }}
+            </a>
         </li>
+
     {% endfor %}
 </ul>
