--- a/code/myboard/templates/base.html
+++ b/code/myboard/templates/base.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>헤더</h1>
+        <!-- <h1>헤더</h1> -->
+        <ul>
+            <li><a href="/board">게시판</a></li>
+        </ul>
     </header>
 
     <div class="content">
