--- a/code/myboard/board/templates/board/board_list.html
+++ b/code/myboard/board/templates/board/board_list.html
@@ -1,15 +1,20 @@
+{% extends 'base.html' %}
+{% block content %}
 
-<h1>게시글 목록</h1>
-<ul>
-    {% for board in object_list %}
-        <li>
-            <h3>
-                <a href="{% url 'board:board_detail' board.id %}">
-                    {{ board.title }}
-                </a>
+    <h1>게시글 목록</h1>
+    <a href="/board/insert">글쓰기</a>
+    <ul>
+        {% for board in object_list %}
+            <li>
+                <h3>
+                    <a href="{% url 'board:board_detail' board.id %}">
+                        {{ board.title }}
+                    </a>
 
-            </h3>
-            <p>{{ board.content }}</p>
-        </li>
-    {% endfor %}
-</ul>
+                </h3>
+                <p>{{ board.content }}</p>
+            </li>
+        {% endfor %}
+    </ul>
+
+{% endblock %}
