--- a/code/myboard/board/templates/board/board_detail.html
+++ b/code/myboard/board/templates/board/board_detail.html
@@ -5,5 +5,6 @@
         {{ object.content }}
     </p>
 
+    <a href="{% url 'board:board_update' object.id %}">수정</a>
 <!-- 댓글 목록 -->
 {% endblock %}
