--- a/code/myboard/board/templates/board/board_update.html
+++ b/code/myboard/board/templates/board/board_update.html
@@ -2,9 +2,10 @@
 {% block content %}
     <h1>게시글 수정</h1>
     <div class="content">
-        <form action="" method="POST">
+        <form action="" method="POST" id="form">
             {% csrf_token %}
-            <input type="hidden" name="board_id" value="{{ board.id }}">
+            <input type="hidden" name="board_id" value="{{ board.id }}"
+                    id="board_id">
 
             <div class="input-box">
                 <label for="title">제목</label>
@@ -15,8 +16,23 @@
                 <textarea name="content" id="content" cols="30" rows="10">{{ board.content }}</textarea>
             </div>
 
-            <button type="submit" class="btn">등록</button>
+            <button type="submit" class="btn">수정</button>
+            <button type="button" class="btn" id="btn-delete">삭제</button>
         </form>
     </div>
+
+    <script>
+        $(function() {
+
+            $('#btn-delete').on('click', function() {
+                // alert('삭제 요청')
+                let form = $('#form')
+                let board_id = $('#board_id').val()
+                form.attr('action', '/board/delete/' + board_id)
+                form.submit()       // 폼 제출
+            })
+
+        })
+    </script>
 
 {% endblock %}
